added 2 more paragaphs

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,9 +10,10 @@
     <p>This is week 4 at ALX</p>
     <h2>Introduction to HTML</h2>
     <p>Learnt the basics of HTML</p>
-    <h3>Last tag</h3>
+    <h3>Last Heading tag</h3>
     <p>In this task I am required to use the heading tags</p>
+    <P>Below is the alx logo</P>
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200"></body></a>
-    
+    <p>Last paragrapgh</p>
 </body>
 </html>
