--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,7 +13,9 @@
     <h3>Last Heading tag</h3>
     <p>In this task I am required to use the heading tags</p>
     <P>Below is the alx logo</P>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200"></body></a>
+    <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+    </a>
     <p>Last paragrapgh</p>
 </body>
 </html>
