Fix structure and embed tweet properly

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tweets</title>
 </head>
 <body>
 
@@ -16,20 +16,15 @@
 
   <main>
     <article>
-      <h1>Make a cool first webpage</h1>
-      <p>This is week 4 at ALX.</p>
-      <h2>Introduction to HTML</h2>
-      <p>Learnt the basics of HTML.</p>
-      <h3>Last Heading tag</h3>
-      <p>In this task I am required to use the heading tags.</p>
-      <p>Below is the ALX logo:</p>
-      <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
-          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-      </a>
-      <p>Last paragraph.</p>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">ALX is changing lives! 🚀<br>Check out their amazing programs. <a href="https://twitter.com/ALX_Africa/status/1661735328598337538">https://twitter.com/ALX_Africa/status/1661735328598337538</a></p>
+        &mdash; ALX Africa (@ALX_Africa)
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </article>
+
     <aside>
-      <p>placeholder to add comment thread later</p>
+      <p>Comments will go here later</p>
     </aside>
   </main>
 
