--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 0 - Basis Structure</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task 3 - Index</title>
 </head>
 <body>
-    <h1>Make a cool first webpage</h1>
-    <p>This is week 4 at ALX</p>
-    <h2>Introduction to HTML</h2>
-    <p>Learnt the basics of HTML</p>
-    <h3>Last Heading tag</h3>
-    <p>In this task I am required to use the heading tags</p>
-    <P>Below is the alx logo</P>
-    <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <h1>Make a cool first webpage</h1>
+      <p>This is week 4 at ALX</p>
+      <h2>Introduction to HTML</h2>
+      <p>Learnt the basics of HTML</p>
+      <h3>Last Heading tag</h3>
+      <p>In this task I am required to use the heading tags</p>
+      <p>Below is the alx logo</p>
+      <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-    </a>
-    <p>Last paragrapgh</p>
+      </a>
+      <p>Last paragraph</p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Joyclare - <a href="https://your-link.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
