--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tweets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task 3 - Index</title>
 </head>
 <body>
-
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -16,19 +15,26 @@
 
   <main>
     <article>
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">ALX is changing lives! 🚀<br>Check out their amazing programs. <a href="https://twitter.com/ALX_Africa/status/1661735328598337538">https://twitter.com/ALX_Africa/status/1661735328598337538</a></p>
-        &mdash; ALX Africa (@ALX_Africa)
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <h1>Make a cool first webpage</h1>
+      <p>This is week 4 at ALX</p>
+      <h2>Introduction to HTML</h2>
+      <p>Learnt the basics of HTML</p>
+      <h3>Last Heading tag</h3>
+      <p>In this task I am required to use the heading tags</p>
+      <p>Below is the alx logo</p>
+      <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+      <p>Last paragraph</p>
     </article>
 
     <aside>
-      <p>Comments will go here later</p>
+      <p>placeholder to add comment thread later</p>
     </aside>
   </main>
 
-  <footer><p>Made by Joyclare Cherono - <a href="https://github.com/Joyclare" target="_blank">here</a>.</p></footer>
-
+  <footer>
+    <p>Made by Joyclare - <a href="https://your-link.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
