--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Task 3 - Index</title>
+  <title>Tweets Page</title>
 </head>
 <body>
   <header>
@@ -15,17 +15,12 @@
 
   <main>
     <article>
-      <h1>Make a cool first webpage</h1>
-      <p>This is week 4 at ALX</p>
-      <h2>Introduction to HTML</h2>
-      <p>Learnt the basics of HTML</p>
-      <h3>Last Heading tag</h3>
-      <p>In this task I am required to use the heading tags</p>
-      <p>Below is the alx logo</p>
-      <a href="https://www.alxafrica.com" target="_blank" rel="noopener">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-      </a>
-      <p>Last paragraph</p>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Excited to be learning HTML at ALX! 🚀</p>
+        &mdash; Joyclare (@cheronoJoyclare)
+        <a href="https://twitter.com/cheronoJoyclare/status/1685647382928293888">July 20, 2025</a>
+      </blockquote> 
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </article>
 
     <aside>
@@ -34,7 +29,7 @@
   </main>
 
   <footer>
-    <p>Made by Joyclare - <a href="https://your-link.com" target="_blank">here</a></p>
+    <p>Made by Joyclare - <a href="https://x.com/cheronoJoyclare" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
