--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,40 @@
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
       </a>
       <p>Last paragraph</p>
+
+      <!-- Learner Info Table -->
+      <h3>Meet Some of Our Learners</h3>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <aside>
@@ -34,7 +68,7 @@
   </main>
 
   <footer>
-    <p>Made by Joyclare - <a href="https://your-link.com" target="_blank">here</a></p>
+    <p>Made by Joyclare - <a href="https://x.com/cheronoJoyclare" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
