Fix portfolio structure issues

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <h2>Contact</h2>
     <p>I'd love to connect with you!</p>
     <ul>
-      <li>Email: <a href="mailto:cherono.joyclare@example.com">cherono.joyclare@example.com</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/joyclarecherono" target="_blank">My LinkedIn</a></li>
+      <li>Email: <a href="mailto:cheronojoyclaire@gmail.com">cheronojoyclare@gmail.com</a></li>
+      <li>LinkedIn: <a href="www.linkedin.com/in/joyclaire-nosh" target="_blank">My LinkedIn</a></li>
       <li>GitHub: <a href="https://github.com/Joyclare" target="_blank">My GitHub</a></li>
     </ul>
   </section>
